formatted hastily written code for readability; also added hr and fixed formating

--- a/localStyles.css
+++ b/localStyles.css
@@ -15,3 +15,7 @@ table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
+hr {
+	border-width: 6px;
+	border-color: #529e5f;
+}
